# StarCam

./: .gitignore
StarCamGui/: CMakeLists.txt  CameraButton.qml  CameraListButton.qml  CameraListPopup.qml  PhotoCaptureControls.qml  PhotoPreview.qml  StarCam.qml  main.cpp  qml.qrc
StarCamGui/actions/: ActionTypes.qml  AppActions.qml
StarCamGui/qdeclarativecamera/: CMakeLists.txt  qdeclarativecamera_plugin.cpp  qdeclarativecamera_plugin.h  qdeclarativemediametadata.cpp  qmldir
StarCamGui/stores/: CamStore.qml  RootStore.qml  UserPrefsStore.qml
